# braindance

./: .gitmodules  CITATION.cff  CLAUDE.md  README.md  pyproject.toml
configs/: channel_montages.yaml  enigma_finetune.yaml  lejepa_default.yaml
scripts/: run_baseline.sh  run_calibration.sh  run_channel_ablation.sh  run_pretrain.sh  run_view_ablation.sh
src/: __init__.py  channel_subsample.py  data.py  evaluate.py  lejepa_eeg.py  train_enigma.py  train_lejepa.py  utils.py  views.py
